--- a/frontend/src/css/userPage/userPageNav.css
+++ b/frontend/src/css/userPage/userPageNav.css
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-evenly;
   padding: 1em;
-  margin: 2em 0;
 }
 
 .up-nav a {
